# garmin-mcp-lite

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  test_e2e.py
.github/workflows/: ci.yml
garmin_mcp_lite/: client.py  login.py  server.py
garmin_mcp_lite/tools/: _common.py  activities.py  challenges.py  coach.py  device.py  events.py  gear.py  health.py  hr_trend.py  training.py  weekly_stats.py
tests/: conftest.py  test_activities.py  test_challenges.py  test_client.py  test_coach.py  test_common.py  test_device.py  test_edge_cases.py  test_errors.py  test_events.py  test_gear.py  test_health.py  test_hr_trend.py  test_training.py  test_weekly_stats.py
