[project]
name = "garmin-mcp-lite"
version = "0.1.3"
description = "精简版 Garmin MCP 服务器 - 专为耐力运动爱好者设计"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Haining Yu", email = "yhn0535@gmail.com" },
]
keywords = ["mcp", "garmin", "garmin-connect", "fitness", "endurance", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.6.0",
    "garminconnect>=0.2.25",
    "pydantic>=2.0",
    "curl-cffi>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/Golden0Voyager/garmin-mcp-lite"
Repository = "https://github.com/Golden0Voyager/garmin-mcp-lite"
Issues = "https://github.com/Golden0Voyager/garmin-mcp-lite/issues"

[project.scripts]
garmin-mcp-lite = "garmin_mcp_lite.server:main"
garmin-mcp-lite-login = "garmin_mcp_lite.login:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[tool.ruff]
extend = "~/.config/ruff/ruff.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["garmin_mcp_lite"]
omit = ["garmin_mcp_lite/login.py", "garmin_mcp_lite/server.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
